<resources>
    <string name="app_name">Birds of a Feather</string>
    <string name="start">START</string>
    <string name="stop">STOP</string>
    <string-array name="years_array">
        <item>2022</item>
        <item>2021</item>
        <item>2020</item>
        <item>2019</item>
        <item>2018</item>
        <item>2017</item>
        <item>2016</item>
        <item>2015</item>
    </string-array>
    <string-array name="quarters_array">
        <item>Fall</item>
        <item>Winter</item>
        <item>Spring</item>
        <item>Summer I</item>
        <item>Summer II</item>
        <item>Special Summer</item>
    </string-array>
    <string-array name="sizes_array">
        <item>Tiny</item>
        <item>Small</item>
        <item>Medium</item>
        <item>Large</item>
        <item>Huge</item>
        <item>Gigantic</item>
    </string-array>
    <string-array name="filters_array">
        <item>Recent</item>
        <item>Small classes</item>
        <item>This quarter only</item>
        <item>Favorites</item>
    </string-array>
    <string name="google_client_id">1039601667298-20j8p6mdo40u53d8j24opq48fgjbv98f.apps.googleusercontent.com</string>
</resources>